<resources>
    <string name="app_name">MediaPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_song">Create a New Song</string>
    <string name="header_title">Options</string>
    <string name="enter_song_name">Enter the song name:</string>
    <string name="enter_artists_name">Enter the artists name:</string>
    <string name="save">Save</string>
    <string name="enter_song_link">Enter the song link:</string>
    <string name="back">Back</string>
    <string name="are_you_sure_delete">Delete the song?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved">Saved</string>
    <string name="cannot_save">Cannot save before all details are filled.</string>
    <string name="welcome">Welcome</string>
    <string name="song_name">Song Name:</string>
    <string name="artist_name">Artist Name:</string>
    <string name="currently_playing">Currently Playing:</string>
</resources>