<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_music_note_24"
            android:id="@+id/fragment_add_song_image"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:tint="?attr/colorOnSecondary"
                android:scaleType="fitXY"
                android:layout_toStartOf="@id/fragment_add_song_space_1"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                android:id="@+id/fragment_add_song_add_camera_image"/>

            <Space
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/fragment_add_song_space_1"/>


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/fragment_add_song_space_1"
                android:tint="?attr/colorOnSecondary"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                android:id="@+id/fragment_add_song_add_from_gallery"/>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_song_name"
            android:textColorHint="?attr/colorOnSecondary"
            android:textColor="?attr/colorOnSecondary"
            android:id="@+id/fragment_add_song_name_et"
            android:layout_margin="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_artists_name"
            android:textColorHint="?attr/colorOnSecondary"
            android:textColor="?attr/colorOnSecondary"
            android:layout_margin="10dp"
            android:id="@+id/fragment_add_song_artist_name_et"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_song_link"
            android:text="https://drive.google.com/u/0/uc?id=1rsrpQQN8N_XTpxNsoOkXuDVWZ-IsAGz7&amp;export=download"
            android:textColorHint="?attr/colorOnSecondary"
            android:textColor="?attr/colorOnSecondary"
            android:layout_margin="10dp"
            android:id="@+id/fragment_add_song_link_et"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:id="@+id/fragment_add_song_save_btn"/>

    </LinearLayout>
</ScrollView>